syntax = "proto3";

package system;
import "google/protobuf/descriptor.proto";
option go_package = "github.com/mars-projects/mars/api/system;system";


/******************************************* UserService ******************************************************/
service System {
    rpc SysUserInfo(SysUserInfoReq) returns (SysUserReply);
}

message SysUserReply {
     int64 user_id = 1;
     string username = 2 ;
     string password = 3;
     string nick_name = 4;
     string phone = 5 ;
     string avatar = 6;
     int64 role_id = 7;
     string sex = 8;
     string email = 9;
     int64 dept_id = 10;
     int64 post_id = 11;
     string remark = 12;
     string status = 13;
}

message SysUserInfoReq {
    string username = 1;
}



